<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mylayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
        
    <Button
        android:id = "@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Restart"/>
     <Button
        android:id = "@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/End_Game"/>
     
     <TextView
    	    android:id="@+id/pausescore"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/title"/>
    
 
</LinearLayout>