<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background = "@drawable/main_pic">

    <ImageView
         android:id="@+id/imageViewLast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/main_title" 
         android:layout_centerHorizontal="true"
         android:paddingBottom="110sp"
         android:paddingTop="10sp" />

    
    <TextView
        android:id = "@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="top|left"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn3"
        android:layout_centerHorizontal="true"
        android:text="@string/Say_Hello" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Credit" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn2"
        android:layout_alignLeft="@+id/btn3"
        android:text="@string/Start" />

</RelativeLayout>